deploy/k8s/overlays/staging/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vibeisland-staging
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: vibeisland-staging-tls
      hosts:
        - staging.vibeisland.lol
  rules:
    - host: staging.vibeisland.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vibeisland
                port:
                  number: 80
